fixed: text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,7 @@ main {
 .selector {
   display: flex;
   flex-direction: column;
+  height: calc(100vh - 50px);
   overflow-y: auto;
 }
 
@@ -117,18 +118,16 @@ main {
 .app-sidebar-note {
   height: 75px;
   padding-left:15px;
-  padding-right: 75px;
+  padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
   border-bottom: 1px solid lightgray;
   flex-grow: 0;
-  overflow: hidden;
 }
 .app-sidebar-note p {
   margin: 10px 0;
 }
 .app-sidebar-note small {
-  display: block;
   color: #999;
 }
 
@@ -182,6 +181,7 @@ main {
   flex-grow: 1;
   /* background-color: red; */
   min-width: 0;
+  height: calc(100vh - 50px);
 }
 
 /* Toolbar */
@@ -212,14 +212,13 @@ main {
   min-width: 0;
 }
 
-.ql-container.ql-snow{ 
-  border-left: none !important;
-  overflow-y: scroll;
-  height: calc(100% - 50px);
-}
 .ql-toolbar.ql-snow{ 
   border-left: none !important;
   height: 50px;
+}
+.ql-container.ql-snow{ 
+  border-left: none !important;
+  max-height: calc(100% - 50px);
 }
 
 .toolbar-input {
@@ -277,8 +276,12 @@ main {
 
 .main-body {
   display: flex;
-  flex-grow: 1;
+  flex-direction: column;
+  height: calc(100vh - 125px);
+  overflow-y: auto;
+  flex-grow: 0;
   padding: 15px;
+  word-wrap: break-word
 }
 
 .disabled-field {
@@ -287,4 +290,8 @@ main {
 
 .date-display {
   padding-left: 5px;
+}
+
+.ql-editor {
+  max-height: calc(100vh - 177px);
 }
